--- a/hexlet_django_blog/article/templates/index_art.html
+++ b/hexlet_django_blog/article/templates/index_art.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Список статей</h1>
     {% for article in articles %}
-        <h2>{{ article.name }}</h2>
-        <div>{{ article.body|slice:":200" }}</div>
+      <h2><a href="{% url 'article' article.id %}">{{ article.name }}</a></h2>
+      <div>{{ article.body|slice:":200" }}</div>
     {% endfor %}
 {% endblock %}
