--- a/hexlet_django_blog/article/templates/index_art.html
+++ b/hexlet_django_blog/article/templates/index_art.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 {% block content %}
     <h1>Список статей</h1>
+    <button type='button'><a href="{% url 'articles_create' %}">Новая статья</a></button>
     {% for article in articles %}
       <h2><a href="{% url 'article' article.id %}">{{ article.name }}</a></h2>
       <div>{{ article.body|slice:":200" }}</div>
