--- a/hexlet_django_blog/templates/base.html
+++ b/hexlet_django_blog/templates/base.html
@@ -8,7 +8,7 @@
     {% block sidebar %}
         <ul>
             <li><a href="/">Главная</a></li>
-            <li><a href="/article/">Статьи</a></li>
+            <li><a href="/articles/">Статьи</a></li>
         </ul>
     {% endblock %}
 </div>
