--- a/hexlet_django_blog/article/templates/index_art.html
+++ b/hexlet_django_blog/article/templates/index_art.html
@@ -9,9 +9,10 @@
 {% endif %}
 {% block content %}
     <h1>Список статей</h1>
-    <button type='button'><a href="{% url 'articles_create' %}">Новая статья</a></button>
+    <small><a href="{% url 'articles_create' %}">Новая статья</a></small>
     {% for article in articles %}
       <h2><a href="{% url 'article' article.id %}">{{ article.name }}</a></h2>
       <div>{{ article.body|slice:":200" }}</div>
+      <small><a href="{% url 'articles_update' article.id %}">Редактировать статью</a></small>
     {% endfor %}
 {% endblock %}
